--- a/config
+++ b/config
@@ -7,7 +7,7 @@
     // Choose the order of the modules
     "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
     "modules-center": ["sway/window"],
-    "modules-right": [ "pulseaudio", "network", "cpu", "memory", "sway/language", "battery", "battery#bat2", "clock", "tray"],
+    "modules-right": [ "pulseaudio", "network", "cpu", "memory", "sway/language", "battery", "battery#bat2", "clock", "custom/poweroff", "tray"],
     // Modules configuration
     // "sway/workspaces": {
     //     "disable-scroll": true,
@@ -24,6 +24,11 @@
     //         "default": ""
     //     }
     // },
+    "custom/poweroff": {
+      "tooltip": false,
+      "format": "",
+      "on-click": "bash $HOME/.config/waybar/scripts/poweroff.sh"
+  },
     "keyboard-state": {
         "numlock": true,
         "capslock": true,
